Fixed horizontal scrollbar issues with responsive menu.

--- a/style.css
+++ b/style.css
@@ -87,12 +87,12 @@ body {
     }
     #nav-menu {
         flex-direction: column;
+
+        align-items: stretch;
     }
     .nav-item {
-        width: 100%;
         padding-top: 10px;
         padding-bottom: 10px;
-        margin-left: 20px;
 
         justify-content: left;
     }
